Fixed an issue with out JS created UL/LI elements not showing up with the bullet points, through class/CSS manipulation.

--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,13 @@ footer{
   display: flex;
   justify-content: center;
 }
+
+h1.data-region{
+  font-weight: bold;
+}
+
+ul.list{
+  box-shadow: none;
+  background-color:#feecf0;
+  list-style-type: circle;
+}
